Fix dark mode background-color style for Editor/ButtonGroup theme component.

--- a/src/theme/Editor/EditMode/ButtonGroup/styles.module.css
+++ b/src/theme/Editor/EditMode/ButtonGroup/styles.module.css
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     align-items: center;
 
-    background-color: var(--ifm-color-emphasis-100);
-    border: solid var(--ifm-color-emphasis-100);
+    background-color: var(--ifm-pre-background);
+    border: solid transparent;
     border-width: 20px 10px 25px;
 }
